cp project/force-app/main/default/objects/Commission_Payment__c/Commission_Payment__c.object-meta.xml
<CustomObject>
    <description>Individual disbursement tranches for partner commission payments</description>
    <label>Commission Payment</label>
    <nameField>
        <displayFormat>CPAY-{000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>