cp project/force-app/main/default/objects/Commission_Payment__c/fields/Odoo_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Payment_ID__c</fullName>
    <label>Odoo Payment ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>