cp project/force-app/main/default/objects/Commission_Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>NEFT</fullName>
                    <default>true</default>
                    <label>NEFT</label>
                </value>
                <value>
                    <fullName>RTGS</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>