cp project/force-app/main/default/objects/Commission_Payment__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <label>UTR / Reference No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>