cp project/force-app/main/default/objects/Commission_Payment__c/validationRules/Completed_Requires_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requires_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Completed"), ISBLANK(Payment_Reference__c))</errorConditionFormula>
    <errorMessage>Payment Reference (UTR) is required for completed payouts.</errorMessage>
</ValidationRule>