cp project/force-app/main/default/objects/Commission_Payment__c/validationRules/Payment_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Payment amount must be greater than zero.</errorMessage>
</ValidationRule>